Improve how code information is analyzed for similarity
Update `CodeChunkVectorStore` to use `HashSet` for more accurate Jaccard similarity calculation by handling word sets correctly.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: c1dffa86-43f1-4fa5-9c36-2045d75778f2
Replit-Commit-Checkpoint-Type: intermediate_checkpoint